[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Characters/RoboMachine/RoboMachine.gd" type="Script" id=2]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_1.png" type="Texture" id=3]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_2.png" type="Texture" id=4]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_3.png" type="Texture" id=5]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_4.png" type="Texture" id=6]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_5.png" type="Texture" id=7]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_6.png" type="Texture" id=8]
[ext_resource path="res://art/Cartoon/RoboMachine/fall/fall_7.png" type="Texture" id=9]
[ext_resource path="res://art/Cartoon/RoboMachine/idle/idle_1.png" type="Texture" id=10]
[ext_resource path="res://art/Cartoon/RoboMachine/attack/attack_2.png" type="Texture" id=11]
[ext_resource path="res://art/sounds/character_attack/laser_attack_1.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "hit",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[node name="RoboMachine" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
position = Vector2( -0.288162, 53.8097 )
frames = SubResource( 1 )
animation = "Idle"
playing = true
offset = Vector2( 0.250412, -53.3483 )

[node name="attack" parent="." index="2"]
stream = ExtResource( 12 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
